--- a/package.json
+++ b/package.json
@@ -31,12 +31,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -51,7 +45,11 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.0",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
     "autoprefixer": "^10.4.4",
+    "eslint": "^8.12.0",
+    "eslint-plugin-react": "^7.29.4",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23"
   }
