--- a/package.json
+++ b/package.json
@@ -12,16 +12,15 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "canvas-confetti": "^1.5.1",
-    "fp-ts": "^2.11.9",
     "framer-motion": "^6.2.8",
-    "io-ts": "^2.2.16",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.29.0",
     "react-hot-toast": "^2.2.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
